--- a/app/src/main/res/layout/activity_nfcdev.xml
+++ b/app/src/main/res/layout/activity_nfcdev.xml
@@ -12,14 +12,15 @@
         android:background="@color/login_btn"
         >
 
-        <ImageButton
+        <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:id="@+id/trace_search"
             android:gravity="center"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/more"/>
+            android:background="@drawable/more"
+            android:scaleType="centerInside"/>
         <TextView
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
