--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -150,6 +150,31 @@
                     android:textSize="18sp"
                     android:text="--"/>
             </LinearLayout>
+            <TextView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/line2"
+                android:layout_margin="5dp"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:text="低电"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lowvoltage_sum"
+                    android:textColor="@color/wifi_acclerate_red"
+                    android:textSize="18sp"
+                    android:text="--"/>
+            </LinearLayout>
         </LinearLayout>
         <Button
             android:id="@+id/scan_btn"
