--- a/app/src/main/res/layout/activity_alarm_dev_detail.xml
+++ b/app/src/main/res/layout/activity_alarm_dev_detail.xml
@@ -16,10 +16,22 @@
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="报警设备数:"
             android:textColor="#ffffff"
-            android:layout_centerInParent="true"
-            android:textSize="18sp" />
+            android:layout_centerHorizontal="true"
+            android:textSize="14sp"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/sum_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10"
+            android:textColor="#ffffff"
+            android:layout_centerHorizontal="true"
+            android:textSize="40sp"
+            android:layout_below="@id/title_tv"
+            android:layout_marginTop="15dp"/>
 
     </RelativeLayout>
 
