--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -104,6 +104,7 @@
                 android:background="@color/line2"
                 android:layout_margin="5dp"/>
             <LinearLayout
+                android:id="@+id/offline_line"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -129,6 +130,7 @@
                 android:background="@color/line2"
                 android:layout_margin="5dp"/>
             <LinearLayout
+                android:id="@+id/fault_line"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -154,6 +156,7 @@
                 android:background="@color/line2"
                 android:layout_margin="5dp"/>
             <LinearLayout
+                android:id="@+id/alarmdev_line"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -179,6 +182,7 @@
                 android:background="@color/line2"
                 android:layout_margin="5dp"/>
             <LinearLayout
+                android:id="@+id/lowvoltage_line"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
