--- a/app/src/main/res/layout/photo_imageview.xml
+++ b/app/src/main/res/layout/photo_imageview.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
         android:src="@drawable/take_photo"/>
