--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -81,5 +81,18 @@
         <attr name="edit_hint_text" format="string"/>
         <attr name="max_search_items" format="integer"/>
     </declare-styleable>
+
+
+    <declare-styleable name="ZDAreaChooseListView">
+        <attr name="hint_TextColor" format="color"/>
+        <attr name="edit_TextColor" format="color"/>
+        <attr name="edit_Text" format="string"/>
+        <attr name="hint_Text" format="string"/>
+        <attr name="clear_choice_IsShow" format="boolean"/>
+    </declare-styleable>
+
+    <declare-styleable name="TimePickerViewHelper">/>
+        <attr name="timerpicker_hint_Text" format="string"/>
+    </declare-styleable>
     
 </resources>
