--- a/app/src/main/res/layout/dropdownlist_view_fire_zd.xml
+++ b/app/src/main/res/layout/dropdownlist_view_fire_zd.xml
@@ -10,19 +10,19 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:paddingLeft="20dp"
+        android:paddingLeft="10dp"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:textColorHint="@color/hint_color_text"
-        android:paddingStart="15dp"
-        android:textSize="14sp"/>
+        android:padding="5dp"
+        android:textSize="12sp"/>
     <ImageView
         android:id="@+id/btn"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_alignParentRight="true"
-        android:src="@drawable/search_down"
-        android:layout_marginRight="10dp"
+        android:src="@drawable/dropdown"
+        android:padding="5dp"
         android:layout_centerVertical="true"
         android:gravity="center"/>
     <ProgressBar
