--- a/app/src/main/res/layout/activity_add_nfc.xml
+++ b/app/src/main/res/layout/activity_add_nfc.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
     <RelativeLayout
         android:id="@+id/add_fire_title"
@@ -124,22 +125,12 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="生产日期:"/>
-                <TextView
+                <com.smart.cloud.fire.view.TimePickerViewHelper
                     android:id="@+id/makeTime_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:textSize="14sp"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical"
-                    android:padding="6dp"
-                    android:text="生产日期"
+                    android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/makeTime"
-                    android:textColor="@color/hint_color_text"
-                    android:imeOptions="actionNext"
-                    android:background="@drawable/edit_view_bg"
-                    />
+                    app:timerpicker_hint_Text="生产日期"/>
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -400,37 +391,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="50dp" />
                 </RelativeLayout>
-                <RelativeLayout
-                    android:id="@+id/rela_worker"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="10dp">
-                    <TextView
-                        android:id="@+id/workerPhone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="绑定巡检账号:"/>
-                    <EditText
-                        android:id="@+id/workerPhone_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:textSize="14sp"
-                        android:layout_marginTop="3dp"
-                        android:layout_marginBottom="3dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:padding="6dp"
-                        android:layout_toRightOf="@id/workerPhone"
-                        android:hint="绑定巡检账号"
-                        android:textColor="@color/text_view_and_kuang"
-                        android:textColorHint="@color/hint_color_text"
-                        android:imeOptions="actionNext"
-                        android:background="@drawable/edit_view_bg"
-                        />
-                </RelativeLayout>
+
+
             </LinearLayout>
 
 
