--- a/app/src/main/res/layout/activity_chioce_dev_type.xml
+++ b/app/src/main/res/layout/activity_chioce_dev_type.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/tianjia_bj"
     tools:context="com.smart.cloud.fire.activity.AddDev.ChioceDevTypeActivity">
     <TextView
         android:id="@+id/title_tv"
@@ -16,12 +17,11 @@
         />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title_tv">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/title_tv"
-            android:background="@drawable/tianjia_bj">
+            android:layout_height="match_parent">
         <TextView
             android:id="@+id/chioce_text"
             android:layout_width="match_parent"
@@ -97,43 +97,42 @@
                     android:layout_gravity="center"
                     android:background="@drawable/corner_blue"/>
             </LinearLayout>
-            <LinearLayout
-                android:id="@+id/spjk_lin"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/sdtj_lin"
-                android:orientation="vertical"
-                android:padding="20dp"
-                android:background="#fff"
-                android:layout_margin="5dp">
-                <ImageButton
-                    android:id="@+id/spjk_btn"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/tianjia_camera"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="视频监控"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:textColor="#fff"
-                    android:padding="10dp"
-                    android:layout_margin="15dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/corner_blue"/>
-            </LinearLayout>
+            <!--<LinearLayout-->
+                <!--android:id="@+id/spjk_lin"-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_below="@id/sdtj_lin"-->
+                <!--android:orientation="vertical"-->
+                <!--android:padding="20dp"-->
+                <!--android:background="#fff"-->
+                <!--android:layout_margin="5dp">-->
+                <!--<ImageButton-->
+                    <!--android:id="@+id/spjk_btn"-->
+                    <!--android:layout_width="60dp"-->
+                    <!--android:layout_height="60dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:layout_margin="10dp"-->
+                    <!--android:background="@drawable/tianjia_camera"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="视频监控"-->
+                    <!--android:layout_marginTop="10dp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textSize="14sp"-->
+                    <!--android:textColor="#fff"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:layout_margin="15dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:background="@drawable/corner_blue"/>-->
+            <!--</LinearLayout>-->
             <LinearLayout
                 android:id="@+id/nfc_lin"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/sdtj_lin"
-                android:layout_toRightOf="@id/sdtj_lin"
                 android:orientation="vertical"
                 android:padding="20dp"
                 android:background="#fff"
@@ -148,7 +147,7 @@
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:text="NFC"
+                    android:text="巡检标签"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:textSize="14sp"
@@ -158,36 +157,36 @@
                     android:layout_gravity="center"
                     android:background="@drawable/corner_blue"/>
             </LinearLayout>
-            <LinearLayout
-                android:id="@+id/yongchuang_lin"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/spjk_lin"
-                android:orientation="vertical"
-                android:padding="20dp"
-                android:background="#fff"
-                android:layout_margin="5dp">
-                <ImageButton
-                    android:id="@+id/yongchuan_btn"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/yongchuan"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="传输装置"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:textColor="#fff"
-                    android:padding="10dp"
-                    android:layout_margin="15dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/corner_blue"/>
-            </LinearLayout>
+            <!--<LinearLayout-->
+                <!--android:id="@+id/yongchuang_lin"-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_below="@id/spjk_lin"-->
+                <!--android:orientation="vertical"-->
+                <!--android:padding="20dp"-->
+                <!--android:background="#fff"-->
+                <!--android:layout_margin="5dp">-->
+                <!--<ImageButton-->
+                    <!--android:id="@+id/yongchuan_btn"-->
+                    <!--android:layout_width="60dp"-->
+                    <!--android:layout_height="60dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:layout_margin="10dp"-->
+                    <!--android:background="@drawable/yongchuan"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="传输装置"-->
+                    <!--android:layout_marginTop="10dp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textSize="14sp"-->
+                    <!--android:textColor="#fff"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:layout_margin="15dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:background="@drawable/corner_blue"/>-->
+            <!--</LinearLayout>-->
         </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
