--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -115,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    android:text="离线"/>
+                    android:text="失联"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
