--- a/app/src/main/res/layout/dropdownlist_view.xml
+++ b/app/src/main/res/layout/dropdownlist_view.xml
@@ -14,6 +14,7 @@
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:textColorHint="@color/hint_color_text"
+        android:textSize="12sp"
         android:padding="5dp"
         android:singleLine="true" />
     <ImageView 
