--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#9b9b9b"
-                android:text="当前版本号（中大）:"
+                android:text="当前版本号:"
                 />
             <TextView
                 android:id="@+id/about_version"
